cmake_minimum_required(VERSION 3.26)
project(ProyectoFinalDeProgramacion_Estructuras)

set(CMAKE_CXX_STANDARD 14)

add_executable(ProyectoFinalDeProgramacion_Estructuras
        main.cpp
        Obstaculo.cpp
        Obstaculo.h
        Posicion.cpp
        Posicion.h
        Red.cpp
        Red.h
        Archivos.cpp
        Archivos.h
)
